updated content jan and fev 2025

--- a/index.html
+++ b/index.html
@@ -1,184 +1,146 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Quadro de Anúncios Digital | Congregação Caboto</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="description"
-            content="Quadro de Anúncios Digital - Congregação Caboto"
-        />
-        <meta
-            name="keywords"
-            content="template, bootstrap, html5, css3, mobile first, responsive"
-        />
-        <meta name="author" content="github.com/marinhotjr" />
 
-        <link
-            rel="shortcut icon"
-            href="assets/images/favicon.ico"
-            type="image/x-icon"
-        />
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Quadro de Anúncios Digital | Congregação Caboto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Quadro de Anúncios Digital - Congregação Caboto" />
+    <meta name="keywords" content="template, bootstrap, html5, css3, mobile first, responsive" />
+    <meta name="author" content="github.com/marinhotjr" />
 
-        <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:description" content="" />
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
-        <meta name="twitter:url" content="" />
-        <meta name="twitter:card" content="" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
-        <link
-            href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800"
-            rel="stylesheet"
-        />
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:description" content="" />
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="" />
+    <meta name="twitter:card" content="" />
 
-        <!-- Animate.css -->
-        <link rel="stylesheet" href="assets/css/animate.css" />
-        <!-- Icomoon Icon Fonts-->
-        <link rel="stylesheet" href="assets/css/icomoon.css" />
-        <!-- Bootstrap  -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css" />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet" />
 
-        <!-- Theme style  -->
-        <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="assets/css/animate.css" />
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="assets/css/icomoon.css" />
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
 
-        <!-- Modernizr JS -->
-        <script src="assets/js/modernizr-2.6.2.min.js"></script>
-        <!-- FOR IE9 below -->
-        <!--[if lt IE 9]>
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <!-- Modernizr JS -->
+    <script src="assets/js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
             <script src="js/respond.min.js"></script>
         <![endif]-->
-    </head>
+</head>
 
-    <body>
-        <div class="fh5co-loader"></div>
+<body>
+    <div class="fh5co-loader"></div>
 
-        <div id="page">
-            <div
-                id="fh5co-aside"
-                style="background-image: url(assets/images/image_1.jpg)"
-            >
-                <div class="overlay"></div>
-                <nav role="navigation">
-                    <ul>
-                        <li>
-                            <a href="index.html"><i class="icon-home"></i></a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="featured">
-                    <span>Congregação Caboto</span>
-                    <h2>Quadro de Anúncios - Digital</h2>
-                </div>
-            </div>
-            <div id="fh5co-main-content">
-                <div class="fh5co-post">
-                    <div class="fh5co-entry padding">
-                        <img
-                            src="assets/images/project-1.jpg"
-                            alt="Reuniao Vida e Ministerio"
-                        />
-                        <div>
-                            <span class="fh5co-post-date">Ano de 2024</span>
-                            <h2>
-                                <a href="pages/vida_ministerio.html"
-                                    >Reuniões Teocráticas</a
-                                >
-                            </h2>
-                            <p>
-                                Designações das Partes na Reunião do Meio de
-                                Semana e Discursos Públicos
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="fh5co-entry padding">
-                        <img
-                            src="assets/images/project-2.jpg"
-                            alt="Atividades Mecânicas"
-                        />
-                        <div>
-                            <span class="fh5co-post-date">Ano de 2024</span>
-                            <h2>
-                                <a href="pages/mecanicas.html"
-                                    >Atividades Mecânicas</a
-                                >
-                            </h2>
-                            <p>Atividade de Cada Irmão nas Reuniões</p>
-                        </div>
-                    </div>
-
-                    <div class="fh5co-entry padding">
-                        <img
-                            src="assets/images/project-3.jpg"
-                            alt="Serviço de Campo"
-                        />
-                        <div>
-                            <span class="fh5co-post-date">Ano de 2024</span>
-                            <h2>
-                                <a href="pages/servicos.html"
-                                    >Programação do Serviço de Campo</a
-                                >
-                            </h2>
-                            <p>
-                                Dias de Campo e Dirigentes e Programação do
-                                Testemunho Público
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="fh5co-entry padding">
-                        <img
-                            src="assets/images/project-4.jpg"
-                            alt="Eventos Teocráticos"
-                        />
-                        <div>
-                            <span class="fh5co-post-date">Ano de 2024</span>
-                            <h2>
-                                <a href="pages/eventos.html"
-                                    >Eventos Teocráticos</a
-                                >
-                            </h2>
-                            <p>
-                                Assembleias e Congressos, Visita do
-                                Superintendente de Circuito
-                            </p>
-                        </div>
-                    </div>
-                    <footer>
-                        <div>
-                            &copy; 2024 - Made with love by
-                            <a
-                                href="https://github.com/marinhotjr"
-                                target="_blank"
-                                >@marinhotjr</a
-                            >
-                        </div>
-                    </footer>
-                </div>
+    <div id="page">
+        <div id="fh5co-aside" style="background-image: url(assets/images/image_1.jpg)">
+            <div class="overlay"></div>
+            <nav role="navigation">
+                <ul>
+                    <li>
+                        <a href="index.html"><i class="icon-home"></i></a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="featured">
+                <span>Congregação Caboto</span>
+                <h2>Quadro de Anúncios - Digital</h2>
             </div>
         </div>
+        <div id="fh5co-main-content">
+            <div class="fh5co-post">
+                <div class="fh5co-entry padding">
+                    <img src="assets/images/project-1.jpg" alt="Reuniao Vida e Ministerio" />
+                    <div>
+                        <span class="fh5co-post-date">Ano de 2025</span>
+                        <h2>
+                            <a href="pages/vida_ministerio.html">Reuniões Teocráticas</a>
+                        </h2>
+                        <p>
+                            Designações das Partes na Reunião do Meio de
+                            Semana e Discursos Públicos
+                        </p>
+                    </div>
+                </div>
 
-        <div class="gototop js-top">
-            <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+                <div class="fh5co-entry padding">
+                    <img src="assets/images/project-2.jpg" alt="Atividades Mecânicas" />
+                    <div>
+                        <span class="fh5co-post-date">Ano de 2025</span>
+                        <h2>
+                            <a href="pages/mecanicas.html">Atividades Mecânicas</a>
+                        </h2>
+                        <p>Atividade de Cada Irmão nas Reuniões</p>
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <img src="assets/images/project-3.jpg" alt="Serviço de Campo" />
+                    <div>
+                        <span class="fh5co-post-date">Ano de 2025</span>
+                        <h2>
+                            <a href="pages/servicos.html">Programação do Serviço de Campo</a>
+                        </h2>
+                        <p>
+                            Dias de Campo e Dirigentes e Programação do
+                            Testemunho Público
+                        </p>
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <img src="assets/images/project-4.jpg" alt="Eventos Teocráticos" />
+                    <div>
+                        <span class="fh5co-post-date">Ano de 2025</span>
+                        <h2>
+                            <a href="pages/eventos.html">Eventos Teocráticos</a>
+                        </h2>
+                        <p>
+                            Assembleias e Congressos, Visita do
+                            Superintendente de Circuito
+                        </p>
+                    </div>
+                </div>
+                <footer>
+                    <div>
+                        &copy; 2024 - Made with love by
+                        <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
+                    </div>
+                </footer>
+            </div>
         </div>
+    </div>
 
-        <!-- jQuery -->
-        <script src="assets/js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
-        <script src="assets/js/jquery.easing.1.3.js"></script>
-        <!-- Bootstrap -->
-        <script src="assets/js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="assets/js/jquery.waypoints.min.js"></script>
-        <!-- Stellar Parallax -->
-        <script src="assets/js/jquery.stellar.min.js"></script>
-        <!-- Main -->
-        <script src="assets/js/main.js"></script>
-    </body>
+    <div class="gototop js-top">
+        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+    </div>
+
+    <!-- jQuery -->
+    <script src="assets/js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="assets/js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <!-- Stellar Parallax -->
+    <script src="assets/js/jquery.stellar.min.js"></script>
+    <!-- Main -->
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
