--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -59,7 +59,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="../assets/images/person_1.jpg" alt="Eventos Teocraticos">
-				<span>2024</span>
+				<span>2025</span>
 				<h3>Eventos Especiais Teocráticos</h3>
 			</div>
 		</div>
@@ -103,8 +103,8 @@
 						<p>Prezados irmãos,</p>
 						<p style="padding-left: 40px;">Temos o prazer de informá-los que a nossa próxima Assembleia de
 							Circuito
-							com o superintendente de circuito será...
-							<em>no domingo,</em><strong> 17 de novembro de 2024.</strong>
+							com o Representante de Betel será...
+							<em>no sábado,</em><strong> 08 de março de 2025.</strong>
 						</p>
 						<p>Local: Salão de Assembleias das Testemunhas de Jeová em Camaçari - <strong>Auditório
 								A</strong></p>
@@ -120,9 +120,9 @@
 						<p>Prezados irmãos,</p>
 						<p style="padding-left: 40px;">Temos o prazer de informá-los sobre a próxima visita do
 							Superintendente de Circuito.
-							<em>Data da visita:</em><strong> A Ser Anunciada.</strong>
+							<em>Data da visita:</em><strong> 18 - 23 de Março de 2025.</strong>
 						</p>
-						<p>Superintendente de Circuito - <strong>Divanildo Mercês</strong></p>
+						<p>Casal Substituto - <strong>Edson e Manu</strong></p>
 					</div>
 				</div>
 			</div>
@@ -155,6 +155,22 @@
 								Abril</strong></p>
 						<p>No ano de <strong>2026</strong> - A Celebração será realizada na <strong>Quinta-feira, 02 de
 								Abril</strong></p>
+						<p>No ano de <strong>2027</strong> - A Celebração será realizada na <strong>Segunda-feira, 22 de
+								Março</strong></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
+						<h3><a name="reuniao_especial"><strong>Anúncio Sobre Congresso 2025</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que o Congresso de 2025 será
+							<em>no final de semana de</em>
+							<strong> 13 - 15 de Junho de 2025.</strong>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -163,7 +179,7 @@
 
 	<footer>
 		<div>
-			&copy; 2024 - Made with love by <a href="https://github.com/marinhotjr" target="_blank">@marinhotjr</a>
+			&copy; 2024 - Made with love by <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
 		</div>
 	</footer>
 
