--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -59,7 +59,7 @@
             </nav>
             <div class="page-title">
                 <img src="../assets/images/person_1.jpg" alt="Atividades Mecanicas" />
-                <span>Ano de 2024</span>
+                <span>Ano de 2025</span>
                 <h3>
                     Designações das Atividades nas Reuniões - presidência,
                     leitores e mecânicas
@@ -112,7 +112,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Novembro</strong>
+                        <strong>Mês de Janeiro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -128,16 +128,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Domingo - 03/11</th>
-                                <td>Vitor</td>
-                                <td>Jonatan</td>
-                                <td>Marcos</td>
-                                <td>Raimundo</td>
-                                <td>Dielson</td>
-                                <td>Everton</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 07/11</th>
+                                <th scope="row">Quinta-feira - 02/01</th>
                                 <td>Everton</td>
                                 <td>Pedro</td>
                                 <td>Dielson</td>
@@ -146,64 +137,82 @@
                                 <td>Claudemiro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 10/11</th>
+                                <th scope="row">Domingo - 05/01</th>
                                 <td>Mário</td>
+                                <td>Elisio</td>
+                                <td>Raimundo</td>
+                                <td>Vitor</td>
+                                <td>Everton</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 09/01</th>
+                                <td>Elísio</td>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
+                                <td>Raimundo</td>
+                                <td>Marcos</td>
+                                <td>Pedro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 12/01</th>
+                                <td>Everton</td>
+                                <td>Jonatan</td>
+                                <td>Dielson</td>
+                                <td>Claudemiro</td>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 16/01</th>
+                                <td>Mário</td>
+                                <td>Jonatan</td>
+                                <td>Pedro</td>
+                                <td>Raimundo</td>
+                                <td>Everton</td>
+                                <td>Marcos</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 19/01</th>
+                                <td>Vitor</td>
+                                <td>Mário</td>
+                                <td>Dielson</td>
+                                <td>Claudemiro</td>
+                                <td>Marcos</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 23/01</th>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
+                                <td>Everton</td>
+                                <td>Claudemiro</td>
+                                <td>Pedro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 26/01</th>
+                                <td>Mário</td>
+                                <td>Pedro</td>
+                                <td>Vitor</td>
+                                <td>Claudemiro</td>
+                                <td>Marcos</td>
+                                <td>Everton</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 30/01</th>
+                                <td>Jonatas</td>
                                 <td>Elísio</td>
                                 <td>Raimundo</td>
-                                <td>Vitor</td>
                                 <td>Everton</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 14/11</th>
-                                <td>Elisio</td>
                                 <td>Vitor</td>
                                 <td>Jonatan</td>
-                                <td>Raimundo</td>
-                                <td>Marcos</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 17/11</th>
-                                <td>Everton</td>
-                                <td>Jonatan</td>
-                                <td>Dielson</td>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 21/11</th>
-                                <td>Mário</td>
-                                <td>Jonatan</td>
-                                <td>Pedro</td>
-                                <td>Raimundo</td>
-                                <td>Everton</td>
-                                <td>Marcos</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 24/11</th>
-                                <td>Vitor</td>
-                                <td>Mário</td>
-                                <td>Dielson</td>
-                                <td>Claudemiro</td>
-                                <td>Marcos</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 28/11</th>
-                                <td>Dielson</td>
-                                <td>Vitor</td>
-                                <td>Dielson</td>
-                                <td>Everton</td>
-                                <td>Claudemiro</td>
-                                <td>Pedro</td>
                             </tr>
                         </tbody>
                     </table>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Dezembro</strong>
+                        <strong>Mês de Fevereiro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -219,7 +228,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Domingo - 01/12</th>
+                                <th scope="row">Domingo - 02/02</th>
                                 <td>Elisio</td>
                                 <td>Dielson</td>
                                 <td>Jonatan</td>
@@ -228,7 +237,7 @@
                                 <td>Marcos</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 05/12</th>
+                                <th scope="row">Quinta-feira - 06/02</th>
                                 <td>Dielson</td>
                                 <td>Raimundo</td>
                                 <td>Claudemiro</td>
@@ -237,7 +246,7 @@
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 08/12</th>
+                                <th scope="row">Domingo - 09/02</th>
                                 <td>Everton</td>
                                 <td>Pedro</td>
                                 <td>Mário</td>
@@ -246,7 +255,7 @@
                                 <td>Claudemiro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 12/12</th>
+                                <th scope="row">Quinta-feira - 13/02</th>
                                 <td>Vitor</td>
                                 <td>Dielson</td>
                                 <td>Jonatan</td>
@@ -255,7 +264,7 @@
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 15/12</th>
+                                <th scope="row">Domingo - 16/02</th>
                                 <td>Mário</td>
                                 <td>Raimundo</td>
                                 <td>Jonatan</td>
@@ -264,7 +273,7 @@
                                 <td>Marcos</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 19/12</th>
+                                <th scope="row">Quinta-feira - 20/02</th>
                                 <td>Elisio</td>
                                 <td>Dielson</td>
                                 <td>Vitor</td>
@@ -273,31 +282,22 @@
                                 <td>Mário</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 22/12</th>
+                                <th scope="row">Domingo - 23/02</th>
                                 <td>Dielson</td>
                                 <td>Vitor</td>
                                 <td>Pedro</td>
-                                <td>Dielson</td>
+                                <td>Everton</td>
                                 <td>Claudemiro</td>
                                 <td>Marcos</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 26/12</th>
+                                <th scope="row">Quinta-feira - 27/02</th>
                                 <td>Vitor</td>
                                 <td>Dielson</td>
                                 <td>Jonatan</td>
                                 <td>Elisio</td>
                                 <td>Everton</td>
                                 <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 29/12</th>
-                                <td>Everton</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                                <td>Raimundo</td>
-                                <td>Marcos</td>
-                                <td>Jonatan</td>
                             </tr>
                         </tbody>
                     </table>
@@ -310,7 +310,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Novembro</strong>
+                        <strong>Mês de Janeiro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -322,30 +322,30 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">03/11</th>
+                                <th scope="row">05/01</th>
                                 <td>Claudemiro Rodrigues</td>
-                                <td>Claudemiro Rodrigues</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">10/11</th>
-                                <td>José Raimundo</td>
-                                <td>Marcos Vitor</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">17/11</th>
-                                <td>Mário N Júnior</td>
                                 <td>Josenildo Cruz</td>
                             </tr>
                             <tr>
-                                <th scope="row">24/11</th>
-                                <td>Elisio Chagas</td>
+                                <th scope="row">12/01</th>
+                                <td>Elísio Chagas</td>
                                 <td>Dielson Paz</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">19/01</th>
+                                <td>Paulo Henrique</td>
+                                <td>Claudemiro Cruz</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">26/01</th>
+                                <td>Mário N Júnior</td>
+                                <td>Everton Santa Rosa</td>
                             </tr>
                         </tbody>
                     </table>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Dezembro</strong>
+                        <strong>Mês de Fevereiro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -357,29 +357,24 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">01/12</th>
-                                <td>Paulo Henrique</td>
-                                <td>Everton Santa Rosa</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">08/12</th>
-                                <td>Mário N Júnior</td>
-                                <td>Claudemiro Rodrigues</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">15/12</th>
+                                <th scope="row">02/02</th>
                                 <td>José Raimundo</td>
                                 <td>Marcos Vitor</td>
                             </tr>
                             <tr>
-                                <th scope="row">22/12</th>
-                                <td>Elisio Chagas</td>
+                                <th scope="row">09/02</th>
+                                <td>Mário N Júnior</td>
+                                <td>Claudemiro Rodrigues</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">16/02</th>
+                                <td>Claudemiro Carvalho</td>
                                 <td>Josenildo Cruz</td>
                             </tr>
                             <tr>
-                                <th scope="row">29/12</th>
-                                <td>Everton Santa Rosa</td>
+                                <th scope="row">23/02</th>
                                 <td>Mário N Júnior</td>
+                                <td>Paulo Henrique</td>
                             </tr>
                         </tbody>
                     </table>
@@ -391,7 +386,7 @@
     <footer>
         <div>
             &copy; 2024 - Made with love by
-            <a href="https://github.com/marinhotjr" target="_blank">@marinhotjr</a>
+            <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
         </div>
     </footer>
 
