--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -59,7 +59,7 @@
             </nav>
             <div class="page-title">
                 <img src="../assets/images/person_1.jpg" alt="Serviço de Campo" />
-                <span>2024</span>
+                <span>2025</span>
                 <h3>Ministério de Campo - Pregação</h3>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     </h2>
 
                     <div>
-                        <img src="../assets/images/data/campo.jpeg" alt="Programação Semanal de Serviço de Campo"
+                        <img src="../assets/images/data/campo.png" alt="Programação Semanal de Serviço de Campo"
                             width="100%" height="100%" />
                     </div>
 
@@ -236,35 +236,35 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 4 a 10 de Novembro</strong>
+                        <strong>Primeira Semana de Cada Mês</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho1.jpeg" alt="Programação Carrinho de 4 a 10 de Novembro"
-                            width="100%" height="100%" />
+                        <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
+                            height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 11 a 17 de Novembro</strong>
+                        <strong>Segunda Semana de Cada Mês</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho2.jpeg"
-                            alt="Programação Carrinho de 11 a 17 de Novembro" width="100%" height="100%" />
+                        <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
+                            height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 18 a 24 de Novembro</strong>
+                        <strong>Terceira Semana de Cada Mês</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho3.jpeg"
-                            alt="Programação Carrinho de 18 a 24 de Novembro" width="100%" height="100%" />
+                        <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
+                            height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 25 de Novembro a 01 de Dezembro</strong>
+                        <strong>Quarta Semana de Cada Mês</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho4.jpeg"
-                            alt="Programação Carrinho de 26 de Novembro a 01 de Dezembro" width="100%" height="100%" />
+                        <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
+                            height="100%" />
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@
     <footer>
         <div>
             &copy; 2024 - Made with love by
-            <a href="https://github.com/marinhotjr" target="_blank">@marinhotjr</a>
+            <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
         </div>
     </footer>
 
