--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -59,7 +59,7 @@
             </nav>
             <div class="page-title">
                 <img src="../assets/images/person_1.jpg" alt="Reuniao Vida e Ministerio" />
-                <span>Ano de 2024</span>
+                <span>Ano de 2025</span>
                 <h3>
                     Programação das Reuniões Vida e Ministério e do Final de
                     Semana
@@ -106,56 +106,56 @@
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Novembro</strong>
-                    </h1>
-                    <div>
-                        <img src="../assets/images/data/vm_07-11-2024.jpeg"
-                            alt="Reunião Vida e Ministério 07 de Novembro de 2024" width="100%" height="100%" />
-                    </div>
-                    br
-                    <div>
-                        <img src="../assets/images/data/vm_14-11-2024.jpeg"
-                            alt="Reunião Vida e Ministério 14 de Novembro de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_21-11-2024.jpeg"
-                            alt="Reunião Vida e Ministério 21 de Novembro de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_28-11-2024.jpeg"
-                            alt="Reunião Vida e Ministério 27 de Novembro de 2024" width="100%" height="100%" />
-                    </div>
-                </div>
-
-                <div class="fh5co-entry padding">
-                    <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Dezembro</strong>
-                    </h1>
-                    <div>
-                        <img src="../assets/images/data/vm_05-12-2024.jpeg"
-                            alt="Reunião Vida e Ministério 05 de Dezembro de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_12-12-2024.jpeg"
-                            alt="Reunião Vida e Ministério 12 de Dezembro de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_19-12-2024.jpeg"
-                            alt="Reunião Vida e Ministério 19 de Dezembro de 2024" width="100%" height="100%" />
-                    </div>
-                    <div>
-                        <img src="../assets/images/data/vm_26-12-2024.jpeg"
-                            alt="Reunião Vida e Ministério 26 de Dezembrode 2024" width="100%" height="100%" />
-                    </div>
-                </div>
-
-                <div class="fh5co-entry padding">
-                    <h1 style="text-align: center; color: black">
                         <strong>Programação Mês de Janeiro de 2025</strong>
                     </h1>
                     <div>
                         <img src="../assets/images/data/vm_02-01-2025.jpeg"
                             alt="Reunião Vida e Ministério 02 de Janeiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_09-01-2025.jpeg"
+                            alt="Reunião Vida e Ministério 09 de Janeiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_16-01-2025.jpeg"
+                            alt="Reunião Vida e Ministério 16 de Janeiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_23-01-2025.jpeg"
+                            alt="Reunião Vida e Ministério 23 de Janeiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_30-01-2025.jpeg"
+                            alt="Reunião Vida e Ministério 30 de Janeiro de 2025" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Fevereiro de 2025</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_06-02-2025.jpeg"
+                            alt="Reunião Vida e Ministério 06 de Fevereiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_12-02-2025.jpeg"
+                            alt="Reunião Vida e Ministério 12 de Fevereiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_20-02-2025.jpeg"
+                            alt="Reunião Vida e Ministério 20 de Fevereiro de 2025" width="100%" height="100%" />
+                    </div>
+
+                    <div>
+                        <img src="../assets/images/data/vm_27-02-2025.jpeg"
+                            alt="Reunião Vida e Ministério 27 de Fevereiro de 2025" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
     <footer>
         <div>
             &copy; 2024 - Made with love by
-            <a href="https://github.com/marinhotjr" target="_blank">@marinhotjr</a>
+            <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
         </div>
     </footer>
 
